--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -15,7 +15,7 @@
 
     <div class="col">
         <div class="col-md">
-            <div class="card text-center text-white m-3" id="total-orders">
+            <div class="card text-center text-white m-3" id="orders-delivered">
                 <div class="card-header">
                     <h5 class="card-title">Orders Delivered</h5>
                 </div>
@@ -28,7 +28,7 @@
 
     <div class="col">
         <div class="col-md">
-            <div class="card text-center text-white m-3" id="total-orders">
+            <div class="card text-center text-white m-3" id="orders-pending">
                 <div class="card-header">
                     <h5 class="card-title">Orders Pending</h5>
                 </div>
