added login and registration pages for he dashboard. added custom groups customer, user, and admin roles for users. Added decorators to limit access to certain pages dependent on their assigned role. updated navbar to reflect role status. added temp image storage for development, later will implement on AWS EC2 instance.

--- a/accounts/templates/accounts/user.html
+++ b/accounts/templates/accounts/user.html
@@ -1,31 +1,9 @@
-{% extends 'accounts/base.html' %} 
+{% extends 'accounts/base.html' %}
+{% load static %}
 {% block block %} 
 {% include 'accounts/status.html' %}
-<br />
-<div class="row d-flex justify-content-between">
-  <div class="col-md-4 ml-4">
-    <h5>Customers</h5>
-    <hr />
-    <div class="card card-body">
-      <a class="btn btn-primary btn-sm btn-block" href="">Create Customer </a>
-      <table class="table table-sm">
-        <tr>
-          <th></th>
-          <th>Customer</th>
-          <th>Phone</th>
-        </tr>
-        {% for customer in customers %}
-        <tr>
-          <td> <a class="btn btn-sm btn-info" href="{% url 'customers' customer.id %}"> View </a></td>
-          <td> {{customer.name }} </td>
-          <td> {{customer.phone }} </td>
-        </tr> 
-        {% endfor %}
-      </table>
-    </div>
-  </div>
 
-  <div class="col-md-7 mr-4">
+<div class="col">
     <h5>Last 5 Orders</h5>
     <hr />
     <div class="card card-body">
@@ -49,5 +27,6 @@
       </table>
     </div>
   </div>
-</div>
-{% endblock %}
+
+            
+{% endblock %} 
