--- a/accounts/templates/accounts/customers.html
+++ b/accounts/templates/accounts/customers.html
@@ -6,8 +6,8 @@
       <a class="btn btn-outline-info btn-sm btn-block" href=""
         >Update Customer</a
       >
-      <a class="btn btn-outline-danger btn-sm btn-block" href=""
-        >Delete Customer</a
+      <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'create_order' customer.id %}"
+        >Place Order</a
       >
     </div>
   </div>
@@ -34,7 +34,9 @@
   <div class="col">
     <div class="card card-body">
       <form method="get">
-        <button class="btn btn-primary" type="submit">Search</button>
+          {{myFilter.form}}
+
+          <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
   </div>
@@ -58,8 +60,8 @@
             <td> {{order.product.category }} </td>
             <td> {{order.date_created }} </td>
             <td> {{order.status }} </td>
-            <td> <a class="btn btn-sm btn-info" href="">Update</a> </td>
-            <td> <a class="btn btn-sm btn-danger" href="">Delete</a></td>
+            <td> <a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a> </td>
+            <td> <a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
         </tr> 
         {% endfor %}
       </table>
