Added process for reseting password. Added a requirements file.. Moved files into a better structure.

--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{% static '/css/base.css' %}">
   </head>
   <body>
-    {% include 'accounts/navbar.html' %} {% block block %} {% endblock %}
+    {% include 'accounts/navbar/navbar.html' %} {% block block %} {% endblock %}
     <script src="" async defer></script>
-    <h2>Footer</h2>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
