--- a/static/css/order_form.css
+++ b/static/css/order_form.css
@@ -5,7 +5,6 @@
     border-color: #152733;
 }
 
-
 .form-holder {
       display: flex;
       flex-direction: column;
@@ -70,7 +69,7 @@
     color: #fff;
 }
 
-.form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
+.form-content input[type=text], .form-content select {
     width: 100%;
     padding: 9px 20px;
     text-align: left;
@@ -83,7 +82,6 @@
     color: #8D8D8D;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    margin-top: 16px;
 }
 
 
