--- a/accounts/templates/accounts/credentials/register_customer.html
+++ b/accounts/templates/accounts/credentials/register_customer.html
@@ -2,15 +2,15 @@
 {% load static %}
 {% block block %} 
 
-<link rel="stylesheet" type="text/css" href="{% static '/css/product_form.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/css/registration_form.css' %}">
 <div class="d-flex justify-content-center h-auto">
-    <form class="requires-validation" method="POST" novalidate>
+    <form class="requires-validation" method="POST" action="{% url 'create_customer' %}" novalidate>
         {% csrf_token %}
         <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <h3>Login</h3>
-                        <p>Please Login</p>                                       
+                        <h3>Register a Customer</h3>
+                        <p>Fill in the data below.</p>                                       
                             
                                 {% for field in form %}
                                 <div class="form-group col-md-12">
@@ -25,39 +25,14 @@
                                     </div>
                                 {% endfor %} 
                                 <div class="d-flex justify-content-center mt-3">
-                                    <input class="btn btn-info" type="submit" value="Login">
+                                    <input class="btn btn-info" type="submit" value="Create Customer">
                                 </div>
-                                <div class="mt-4">
-                                    <div class="d-flex justify-content-center links text-light">
-                                        Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
-                                    </div>
-                                </div>
-
-                                <div class="mt-4">
-                                    <div class="d-flex justify-content-center links text-light">
-                                        Forgot Password? <a href="{% url 'password_reset' %}" class="ml-2">Reset Password</a>
-                                    </div>
-                                </div>
-                                
                                 {% if form.errors %}
                                     <div class="alert alert-danger" role="alert">{{form.errors}}</div>
                                 {% endif %}
-                                {% for message in messages %}
-                                    <div class="alert alert-success" role="alert">{{message}}</div>
-                                {% endfor %}
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
-{% comment %} <script>
-/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field 
-*/
-
-for (var field in form_fields){	
-form_fields[field].className += ' form-control'
-}
-</script> {% endcomment %}
-            
 {% endblock %} 
