--- a/accounts/templates/accounts/customer_form.html
+++ b/accounts/templates/accounts/customer_form.html
@@ -2,84 +2,42 @@
 {% load static %}
 {% block block %} 
 
-<form action ="" method="POST">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" name = "Submit">
-</form>
-
-<form class="form-body">
-    {% csrf_token %}
-    <div class="row">
+<link rel="stylesheet" type="text/css" href="{% static '/css/registration_form.css' %}">
+<div class="d-flex justify-content-center h-auto">
+    <form class="requires-validation" method="POST" action="" novalidate>
+        {% csrf_token %}
         <div class="form-holder">
-            <div class="form-content">
-                <div class="form-items">
-                    <h3>Register Today</h3>
-                    <p>Fill in the data below.</p>
-                    <form class="requires-validation" novalidate>
-
-                        <div class="col-md-12">
-                           <input class="form-control" type="text" name="name" placeholder="Full Name" required>
-                           <div class="valid-feedback">Username field is valid!</div>
-                           <div class="invalid-feedback">Username field cannot be blank!</div>
+                <div class="form-content">
+                    <div class="form-items">
+                        <h3>Update a Customer</h3>
+                        <p>Fill in the data below.</p>                                       
+                            
+                                {% for field in form %}
+                                    {% if field.label != 'Group' and field.label != 'Profile pic'%}
+                                    <div class="form-group col-md-12">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <div class="input-group-text text-dark">{{field.label}}</div>
+                                            </div>    
+                                            <input class="form-control" type="text"  name={{field.name}} placeholder="" required></input>
+                                        </div>   
+                                    </div>   
+                                    {% elif field.label == 'Profile pic'%}
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="customFile" name={{field.name}}>
+                                        <label class="custom-file-label" for="customFile">Profile Picture</label>
+                                      </div>
+                                    {% endif %}
+                                {% endfor %} 
+                                <div class="d-flex justify-content-center mt-3">
+                                    <input class="btn btn-info" type="submit" value="Update Customer">
+                                </div>
+                                {% if form.errors %}
+                                    <div class="alert alert-danger" role="alert">{{form.errors}}</div>
+                                {% endif %}
+                            </div>
                         </div>
-
-                        <div class="col-md-12">
-                            <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
-                             <div class="valid-feedback">Email field is valid!</div>
-                             <div class="invalid-feedback">Email field cannot be blank!</div>
-                        </div>
-
-                       <div class="col-md-12">
-                            <select class="form-select mt-3" required>
-                                  <option selected disabled value="">Position</option>
-                                  <option value="jweb">{{ forms.customer}}</option>
-                                  <option value="sweb">Senior Web Developer</option>
-                                  <option value="pmanager">Project Manager</option>
-                           </select>
-                            <div class="valid-feedback">You selected a position!</div>
-                            <div class="invalid-feedback">Please select a position!</div>
-                       </div>
-
-
-                       <div class="col-md-12">
-                          <input class="form-control" type="password" name="password" placeholder="Password" required>
-                           <div class="valid-feedback">Password field is valid!</div>
-                           <div class="invalid-feedback">Password field cannot be blank!</div>
-                       </div>
-
-
-                       <div class="col-md-12 mt-3">
-                        <label class="mb-3 mr-1" for="gender">Gender: </label>
-
-                        <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
-                        <label class="btn btn-sm btn-outline-secondary" for="male">Male</label>
-
-                        <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
-                        <label class="btn btn-sm btn-outline-secondary" for="female">Female</label>
-
-                        <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
-                        <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
-                           <div class="valid-feedback mv-up">You selected a gender!</div>
-                            <div class="invalid-feedback mv-up">Please select a gender!</div>
-                        </div>
-
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                      <label class="form-check-label">I confirm that all data are correct</label>
-                     <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
                     </div>
-              
-
-                        <div class="form-button mt-3">
-                            <button id="submit" type="submit" class="btn btn-primary">Register</button>
-                        </div>
-                    </form>
-                </div>
+                </form>
             </div>
-        </div>
-    </div>
-</form>
-
-            
 {% endblock %} 
