--- a/accounts/templates/accounts/customers.html
+++ b/accounts/templates/accounts/customers.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md">
     <div class="card card-body">
-      <a class="btn btn-outline-info btn-sm btn-block" href=""
+      <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_customer' customer.id %}"
         >Update Customer</a
       >
       <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'create_order' customer.id %}"
