--- a/accounts/templates/accounts/dashboard/dashboard.html
+++ b/accounts/templates/accounts/dashboard/dashboard.html
@@ -1,13 +1,13 @@
 {% extends 'accounts/base.html' %} 
 {% block block %} 
-{% include 'accounts/dashboard/status.html' %}
+{% include 'accounts/status.html' %}
 <br />
 <div class="row d-flex justify-content-between">
   <div class="col-md-4 ml-4">
     <h5>Customers</h5>
     <hr />
     <div class="card card-body">
-      <a class="btn btn-primary btn-sm btn-block" href="{% url 'account' %}">Create Customer </a>
+      <a class="btn btn-primary btn-sm btn-block" href="{% url  'create_customer' %}">Create Customer </a>
       <table class="table table-sm">
         <tr>
           <th></th>
@@ -29,24 +29,28 @@
     <h5>Last 5 Orders</h5>
     <hr />
     <div class="card card-body">
-      <table class="table table-sm">
-        <tr>
-          <th>Product</th>
-          <th>Date Ordered</th>
-          <th>Status</th>
-          <th>Update</th>
-          <th>Remove</th>
-        </tr>
-        {% for order in orders %}
-        <tr>
-            <td> {{ order.product.name }} </td>
-            <td> {{ order.date_created }} </td>
-            <td> {{ order.status }} </td>
-            <td> <a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a> </td>
-            <td> <a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
-        </tr> 
-        {% endfor %}
-      </table>
+      <div class="panel-body table-responsive">
+        <table class="table table-sm">
+          <tr>
+            <th>Product</th>
+            <th>Date Ordered</th>
+            <th>Owner</th>
+            <th>Status</th>
+            <th>Update</th>
+            <th>Remove</th>
+          </tr>
+          {% for order in orders %}
+          <tr>
+              <td> {{ order.product.name }} </td>
+              <td> {{ order.date_created }} </td>
+              <td> {{ order.customer }} </td>
+              <td> {{ order.status }} </td>
+              <td> <a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a> </td>
+              <td> <a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
+          </tr> 
+          {% endfor %}
+        </table>
+    </div>
     </div>
   </div>
 </div>
