--- a/accounts/templates/accounts/products/create_form.html
+++ b/accounts/templates/accounts/products/create_form.html
@@ -13,25 +13,20 @@
                         <h3>Create a Product</h3>
                         <p>Fill in the data below.</p>
                         {% for field in form %}
+                        
                             <div class="form-group col-md-12">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
                                         <div class="input-group-text text-dark">{{field.label}}</div>
                                     </div>
-                                {% if field.field.choices %}
+                                {% if field.field.choices or field.field.all  %}
                                     <select class="custom-select" name={{field.name}} required> 
                                         {% for value, label in field.field.choices %}
-                                        <option value="{{ value }}" default:{{ label }} selected>
-                                            {{ label }}
-                                        </option>
-                                        {% endfor %}
-                                    </select>
-                                {% elif field.field.all %}
-                                    <select class="custom-select" name={{field.name}} required> 
-                                        {% for value, label in field.field.choices %}
-                                        <option value="{{ value }}" default:{{ label }} selected>
-                                            {{ label }}
-                                        </option>
+                                            {% if label != '---------' %}
+                                            <option value="{{ value }}" default:{{ label }} selected>
+                                                {{ label }}
+                                            </option>
+                                            {% endif %}
                                         {% endfor %}
                                     </select>
                                 {% elif field.label == 'Price' %}
@@ -50,19 +45,13 @@
                         {% if form.errors %}
                             <div class="alert alert-danger" role="alert">{{form.errors}}</div>
                         {% endif %}
+                        {% for message in messages %}
+                            <div class="alert alert-danger" role="alert">{{message}}</div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
     </form>
 </div>
- <script>
-/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field 
-*/
-
-for (var field in form){	
-form[field].className += ' form-control'
-}
-</script>
             
 {% endblock %} 
